--- a/server/src/main/resources/static/ofd/index.html
+++ b/server/src/main/resources/static/ofd/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -45,6 +45,8 @@
           </div>
           <div id="zoomSelect" class="select-icon" title="缩放比例">
             <select id="zoomValue">
+              <option value="width">适合页宽</option>
+              <option value="4.0">400%</option>
               <option value="3.0">300%</option>
               <option value="2.0">200%</option>
               <option value="1.5">150%</option>
